objects/First_Impressions__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>HYPERLINK( Implementation_Case_Name__r.AccountId ,  Implementation_Case_Name__r.Account.Name   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_DBA__c</fullName>
        <formula>Implementation_Case_Name__r.Account.Account_Name_DBA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name DBA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approved_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>TEXT(Implementation_Case_Name__r.Group_Name__r.ClaimSystem__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_Special_Needs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments/Special Needs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_SME_Queue_time__c</fullName>
        <formula>IF( 
ISBLANK(In_Progress_Date_Completed__c),Now() - Not_Started_Date_Completed__c, 
(In_Progress_Date_Completed__c - Not_Started_Date_Completed__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME Queue time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_SME_time__c</fullName>
        <formula>IF( 
ISBLANK(Approved_Date_Completed__c),((Now() - In_Progress_Date_Completed__c) - Pending_Correction_Time__c) , 
((Approved_Date_Completed__c - In_Progress_Date_Completed__c) - Pending_Correction_Time__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current SME time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligibility_Specifics__c</fullName>
        <formula>Implementation_Case_Name__r.Group_Name__r.First_Impression_Check__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligibility Specifics</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eligible_Lives__c</fullName>
        <formula>TEXT( Implementation_Case_Name__r.Group_Name__r.TotalEligibles__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible Lives</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Impressions_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>First Impressions Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>First_Impressions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Impressions_Service_Numbers__c</fullName>
        <label>First Impressions Service Numbers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>844-497-5954</fullName>
                </value>
                <value>
                    <fullName>855-402-9628</fullName>
                </value>
                <value>
                    <fullName>877-833-5728</fullName>
                </value>
                <value>
                    <fullName>888-231-5040</fullName>
                </value>
                <value>
                    <fullName>888-315-2049</fullName>
                </value>
                <value>
                    <fullName>888-831-2238</fullName>
                </value>
                <value>
                    <fullName>XYZ</fullName>
                    <isActive>false</isActive>
                    <label>XYZ</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Impressions_Stage__c</fullName>
        <label>First Impressions Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01 Not Started</fullName>
                    <default>true</default>
                    <label>01 Not Started</label>
                </value>
                <value>
                    <fullName>02 Work In Progress</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction</fullName>
                </value>
                <value>
                    <fullName>03 Pending Correction Returned</fullName>
                </value>
                <value>
                    <fullName>04 Approved</fullName>
                </value>
                <value>
                    <fullName>05 Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Impressions_Type__c</fullName>
        <label>First Impressions Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental / Vision</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                    <isActive>false</isActive>
                    <label>Both</label>
                </value>
                <value>
                    <fullName>Dental and Vision</fullName>
                    <isActive>false</isActive>
                    <label>Dental and Vision</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>HYPERLINK( Implementation_Case_Name__r.Group_Name__r.Id ,  Implementation_Case_Name__r.Group_Name__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Case Name</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>First Impressions1</relationshipLabel>
        <relationshipName>First_Impressions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Case Name</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>First Impressions</relationshipLabel>
        <relationshipName>First_Impressions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Start_Date__c</fullName>
        <description>This field refers to the Implementation Case Start Date field of the related Implementation Case.</description>
        <formula>Implementation_Tracking_ID__r.Implementation_Record_ID__r.EffectiveDate</formula>
        <label>Implementation Case Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Case__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;Implementation_Case_Name__c,Implementation_Case_Name__r.OrderNumber)</formula>
        <label>Implementation Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Implementation_Case_Name__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation Tracking ID</label>
        <referenceTo>Implementation_Tracking__c</referenceTo>
        <relationshipLabel>First Impressions</relationshipLabel>
        <relationshipName>First_Impressions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>TEXT(Implementation_Case_Name__r.Implementation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>In_Progress_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_This_A_Standard_Or_Modified_Request__c</fullName>
        <label>Is This A Standard Or Modified Request?</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Modified</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LoggedinProfile__c</fullName>
        <formula>$User.ProfileName__c</formula>
        <label>LoggedinProfile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBU_Code__c</fullName>
        <formula>TEXT( Implementation_Case_Name__r.Account.MBU_Codes__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MBU Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Started_Date_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Not_Started_Date_Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName + Owner:Queue.QueueName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingCorrectionAction__c</fullName>
        <formula>IF(AND(OR(LoggedinProfile__c ==&apos;SME&apos;,LoggedinProfile__c ==&apos;SME Dual&apos;,LoggedinProfile__c ==&apos;Specialty Post Sales&apos;, LoggedinProfile__c ==&apos;Specialty Post Sales Dual&apos;), Tech_Support_FI__c == False),&apos;Y&apos;,&apos;N&apos;)</formula>
        <label>PendingCorrectionAction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Time__c</fullName>
        <label>Pending Correction Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Corrections_Stage__c</fullName>
        <description>This field fetches the associated Pending Correction&apos;s Stage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Corrections Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Text(Implementation_Case_Name__r.Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <formula>Implementation_Case_Name__r.Situs_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Situs State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Support_FI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tech Support FI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340))&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Url</label>
        <type>Text</type>
    </fields>
    <label>First Impression</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_First_Impressions</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All First Impressions</label>
    </listViews>
    <listViews>
        <fullName>First_Impression_Local_First_Impressions</fullName>
        <filterScope>Queue</filterScope>
        <label>First Impression - Local</label>
        <queue>First_Impression_Local</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>In_Progress_First_Impressions</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Impressions_Stage__c</field>
            <operation>notEqual</operation>
            <value>01 Not Started,04 Approved,05 Declined</value>
        </filters>
        <label>In Progress First Impressions</label>
    </listViews>
    <listViews>
        <fullName>My_Assigned_First_Impressions_cases</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Situs_State__c</columns>
        <columns>First_Impressions_Type__c</columns>
        <columns>First_Impressions_Stage__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Assigned First Impressions cases</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_First_Impressions</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Type__c</columns>
        <columns>Owner__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Claim_System__c</columns>
        <columns>Region__c</columns>
        <columns>Situs_State__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>First_Impressions_Stage__c</field>
            <operation>equals</operation>
            <value>01 Not Started</value>
        </filters>
        <filters>
            <field>First_Impressions_Type__c</field>
            <operation>equals</operation>
            <value>Medical</value>
        </filters>
        <label>Unassigned Medical First Impressions</label>
        <queue>First_Impression_Local</queue>
    </listViews>
    <listViews>
        <fullName>Unassigned_First_Impressions_Specialty</fullName>
        <columns>NAME</columns>
        <columns>Account_Legal_Name__c</columns>
        <columns>Group_Number__c</columns>
        <columns>Implementation_Effective_Date__c</columns>
        <columns>Situs_State__c</columns>
        <columns>First_Impressions_Type__c</columns>
        <columns>First_Impressions_Stage__c</columns>
        <columns>Owner__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>First_Impressions_Type__c</field>
            <operation>equals</operation>
            <value>Dental / Vision</value>
        </filters>
        <label>Unassigned First Impressions – Specialty</label>
        <queue>First_Impression_Local</queue>
    </listViews>
    <nameField>
        <displayFormat>FI-{0000}</displayFormat>
        <label>First Impressions Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>First Impressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>